# aptos-rust

./: Cargo.toml  README.md
src/: main.rs
