[package]
name = "aptos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
once_cell = "1.10.0"
url = { version = "2.4.0", features = ["serde"] }
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"]}


[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin", branch = "main" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
